# actions-cookie-cutter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/run-pre-commit/: action.yaml
.github/actions/setup-poetry/: action.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: ci.yaml
actions_cookie_cutter/: funcions.py
tests/: test_functions.py
